Fixing column spacing when there are only a few books

--- a/frontend/src/pages/book/BookPage.css
+++ b/frontend/src/pages/book/BookPage.css
@@ -6,6 +6,10 @@
     margin-bottom: 15px;
 }
 
+.books-container {
+    width: 100%;
+}
+
 .loading-card {
     padding: 2rem
 }
